--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Navigatiebalk -->
     <header class="bg-foreground-light dark:bg-foreground-dark text-text-primary-light dark:text-text-primary-dark sticky top-0 z-50 shadow-lg">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-heading font-semibold" data-lang="nav_brand">HWWH Freelance</a>
+            <a href="#" class="text-2xl font-heading font-semibold" data-lang="nav_brand">HWWHWW Freelance</a>
             <div class="hidden md:flex space-x-6 items-center">
                 <a href="#diensten" class="hover:text-accent-light dark:hover:text-accent-dark transition-colors" data-lang="nav_services">Diensten</a>
                 <a href="#portfolio" class="hover:text-accent-light dark:hover:text-accent-dark transition-colors" data-lang="nav_portfolio">Portfolio</a>
