--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         <p class="text-lg text-gray-300 mb-8" data-lang="contact_subtitle">Laten we vrijblijvend kennismaken. Stuur me een bericht en ik neem binnen 24 uur contact met je op.</p>
                     </div>
                     <!-- BELANGRIJK: De 'action' van dit formulier moet naar een backend service wijzen. Zie de aparte instructies. -->
-                    <form action="#" method="POST">
+                    <form action="https://formspree.io/f/movlendj" method="POST">
                         <div class="grid md:grid-cols-2 gap-6 mb-6">
                             <div>
                                 <label for="name" class="block mb-2 font-medium" data-lang="form_name">Naam</label>
