--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Navigatiebalk -->
     <header class="bg-foreground-light dark:bg-foreground-dark text-text-primary-light dark:text-text-primary-dark sticky top-0 z-50 shadow-lg">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-heading font-semibold" data-lang="nav_brand">HWWHWWH Freelance</a>
+            <a href="#" class="text-2xl font-heading font-semibold" data-lang="nav_brand">HWW Freelance</a>
             <div class="hidden md:flex space-x-6 items-center">
                 <a href="#diensten" class="hover:text-accent-light dark:hover:text-accent-dark transition-colors" data-lang="nav_services">Diensten</a>
                 <a href="#portfolio" class="hover:text-accent-light dark:hover:text-accent-dark transition-colors" data-lang="nav_portfolio">Portfolio</a>
@@ -164,7 +164,7 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-col md:flex-row items-center gap-12" data-aos="fade-up">
                     <div class="md:w-1/3">
-                        <img src="foto-cas.jpg" alt="Professionele foto van Cas van Hövell" class="rounded-full shadow-2xl mx-auto w-64 h-64 object-cover">
+                        <img src="assets/foto-cas.jpg" alt="Professionele foto van Cas van Hövell" class="rounded-full shadow-2xl mx-auto w-64 h-64 object-cover">
                     </div>
                     <div class="md:w-2/3">
                         <h2 class="font-heading text-4xl font-semibold text-text-primary-light dark:text-text-primary-dark mb-4" data-lang="about_title">Jouw partner in digitale groei.</h2>
@@ -220,25 +220,12 @@
                     <p class="text-lg mt-2" data-lang="portfolio_subtitle">Een selectie van mijn werk.</p>
                 </div>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Project 1: Calculator -->
+                    <!-- Project 1: Leodoro Koffie -->
                     <div class="project-card bg-foreground-light dark:bg-foreground-dark border border-border-light dark:border-border-dark rounded-xl shadow-lg overflow-hidden group" data-aos="fade-up" data-aos-delay="100">
                         <div class="relative">
-                            <img src="thumbnail-rekentool.jpg" alt="Project Koffie Calculator" class="w-full h-60 object-cover transition-transform duration-500">
-                             <div class="project-overlay absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 transition-opacity duration-500">
-                                <a href="rekentool.html" class="text-white border-2 border-white py-2 px-6 rounded-lg hover:bg-white hover:text-black transition-all" data-lang="demo_button" target="_blank">Bekijk Demo</a>
-                            </div>
-                        </div>
-                        <div class="p-6">
-                            <h3 class="font-heading text-xl font-medium text-text-primary-light dark:text-text-primary-dark" data-lang="project3_title">Koffie Calculator</h3>
-                            <p class="mt-1" data-lang="project3_desc">Custom JavaScript Tool</p>
-                        </div>
-                    </div>
-                    <!-- Project 2: Leodoro -->
-                    <div class="project-card bg-foreground-light dark:bg-foreground-dark border border-border-light dark:border-border-dark rounded-xl shadow-lg overflow-hidden group" data-aos="fade-up" data-aos-delay="200">
-                        <div class="relative">
-                            <img src="thumbnail-leodoro-koffie.jpg" alt="Project Leodoro Koffie" class="w-full h-60 object-cover transition-transform duration-500">
+                            <img src="assets/logo-leodoro.png" alt="Project Leodoro Koffie" class="w-full h-60 object-cover transition-transform duration-500">
                             <div class="project-overlay absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 transition-opacity duration-500">
-                                <a href="case-study-leodorokoffie.pdf" class="text-white border-2 border-white py-2 px-6 rounded-lg hover:bg-white hover:text-black transition-all" data-lang="case_study_button" target="_blank">Bekijk Case Study</a>
+                                <a href="/case-studies/leodoro.html" class="text-white border-2 border-white py-2 px-6 rounded-lg hover:bg-white hover:text-black transition-all" data-lang="case_study_button" target="_blank">Bekijk Case Study</a>
                             </div>
                         </div>
                         <div class="p-6">
@@ -246,12 +233,44 @@
                             <p class="mt-1" data-lang="project1_desc">Shopify Webshop & SEO</p>
                         </div>
                     </div>
-                    <!-- Project 3: KlikAanKlikUit -->
+                    <!-- Project 2: Affiliate Website -->
+                    <div class="project-card bg-foreground-light dark:bg-foreground-dark border border-border-light dark:border-border-dark rounded-xl shadow-lg overflow-hidden group" data-aos="fade-up" data-aos-delay="200">
+                        <div class="relative">
+                            <img src="assets/logo-crashgames-transparant.png" alt="Project Affiliate Website" class="w-full h-60 object-cover">
+                            <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col items-center justify-center text-center p-4">
+                                <span class="text-white text-2xl font-bold" data-lang="in_progress">In Progress</span>
+                                <a href="https://crashgames.casino" class="mt-2 text-sm text-blue-300 hover:text-blue-200 underline" target="_blank">crashgames.casino</a>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="font-heading text-xl font-medium text-text-primary-light dark:text-text-primary-dark" data-lang="project_affiliate_title">Affiliate Website</h3>
+                            <p class="mt-1" data-lang="project_affiliate_desc">WordPress & Advanced SEO</p>
+                        </div>
+                    </div>
+                    <!-- Project 3: MyLineup App -->
                     <div class="project-card bg-foreground-light dark:bg-foreground-dark border border-border-light dark:border-border-dark rounded-xl shadow-lg overflow-hidden group" data-aos="fade-up" data-aos-delay="300">
                         <div class="relative">
-                            <img src="thumbnail-klikaanklikuit.jpg" alt="Project KlikAanKlikUit" class="w-full h-60 object-cover transition-transform duration-500">
+                            <img src="assets/logo-mylineup.png" alt="Project MyLineup App" class="w-full h-60 object-cover">
+                             <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col items-center justify-center text-center p-4">
+                                <span class="text-white text-2xl font-bold" data-lang="in_progress_2">In Progress</span>
+                                <a href="https://showhopper-d0c38.web.app/" class="mt-2 text-sm text-blue-300 hover:text-blue-200 underline" target="_blank">Bekijk de app</a>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="font-heading text-xl font-medium text-text-primary-light dark:text-text-primary-dark" data-lang="project_mylineup_title">MyLineup App</h3>
+                            <p class="mt-1" data-lang="project_mylineup_desc">Festival App Concept</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Verborgen projecten -->
+                <div id="extra-projects" class="hidden grid md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+                    <!-- Project 4: KlikAanKlikUit -->
+                    <div class="project-card bg-foreground-light dark:bg-foreground-dark border border-border-light dark:border-border-dark rounded-xl shadow-lg overflow-hidden group">
+                        <div class="relative">
+                            <img src="assets/logo-klikaanklikuit.jpg" alt="Project KlikAanKlikUit" class="w-full h-60 object-cover transition-transform duration-500">
                              <div class="project-overlay absolute inset-0 bg-black bg-opacity-60 flex items-center justify-center opacity-0 transition-opacity duration-500">
-                                <a href="https://klikaanklikuit.nl/" class="text-white border-2 border-white py-2 px-6 rounded-lg hover:bg-white hover:text-black transition-all" data-lang="case_study_button2" target="_blank">Bekijk Case Study</a>
+                                <a href="case-studies/klikaanklikuit" class="text-white border-2 border-white py-2 px-6 rounded-lg hover:bg-white hover:text-black transition-all" data-lang="case_study_button2" target="_blank">Bekijk Case Study</a>
                             </div>
                         </div>
                         <div class="p-6">
@@ -259,34 +278,17 @@
                             <p class="mt-1" data-lang="project2_desc">WordPress & Content Marketing</p>
                         </div>
                     </div>
-                </div>
-                
-                <!-- Verborgen projecten -->
-                <div id="extra-projects" class="hidden grid md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
-                    <!-- Project 4: Bellavino -->
+                    <!-- Project 5: Bellavino -->
                     <div class="project-card bg-foreground-light dark:bg-foreground-dark border border-border-light dark:border-border-dark rounded-xl shadow-lg overflow-hidden group">
                         <div class="relative">
-                            <img src="https://placehold.co/600x400/374151/9ca3af?text=BellaVino" alt="Project BellaVino" class="w-full h-60 object-cover">
+                            <img src="https://placehold.co/600x400/374151/9ca3af?text=BellaVino" alt="Project Bellavino" class="w-full h-60 object-cover">
                             <div class="absolute inset-0 bg-black bg-opacity-70 flex items-center justify-center">
                                 <span class="text-white text-2xl font-bold" data-lang="website_offline">Website Offline</span>
                             </div>
                         </div>
                         <div class="p-6">
-                            <h3 class="font-heading text-xl font-medium text-text-primary-light dark:text-text-primary-dark" data-lang="project_bellavino_title">BellaVino</h3>
+                            <h3 class="font-heading text-xl font-medium text-text-primary-light dark:text-text-primary-dark" data-lang="project_bellavino_title">Bellavino</h3>
                             <p class="mt-1" data-lang="project_bellavino_desc">Shopify Webshop & E-commerce</p>
-                        </div>
-                    </div>
-                    <!-- Project 5: Affiliate -->
-                    <div class="project-card bg-foreground-light dark:bg-foreground-dark border border-border-light dark:border-border-dark rounded-xl shadow-lg overflow-hidden group">
-                        <div class="relative">
-                            <img src="https://placehold.co/600x400/FFD700/000000?text=Affiliate" alt="Project Affiliate Website" class="w-full h-60 object-cover">
-                            <div class="absolute inset-0 bg-black bg-opacity-70 flex items-center justify-center">
-                                <span class="text-white text-2xl font-bold" data-lang="coming_soon">Coming Soon</span>
-                            </div>
-                        </div>
-                        <div class="p-6">
-                            <h3 class="font-heading text-xl font-medium text-text-primary-light dark:text-text-primary-dark" data-lang="project_affiliate_title">Affiliate Website</h3>
-                            <p class="mt-1" data-lang="project_affiliate_desc">WordPress & Advanced SEO</p>
                         </div>
                     </div>
                     <!-- Project 6: GEO -->
@@ -379,7 +381,7 @@
                         <p class="text-lg text-gray-300 mb-8" data-lang="contact_subtitle">Laten we vrijblijvend kennismaken. Stuur me een bericht en ik neem binnen 24 uur contact met je op.</p>
                     </div>
                     <!-- BELANGRIJK: De 'action' van dit formulier moet naar een backend service wijzen. Zie de aparte instructies. -->
-                    <form action="https://formspree.io/f/movlendj" method="POST">
+                    <form action="#" method="POST">
                         <div class="grid md:grid-cols-2 gap-6 mb-6">
                             <div>
                                 <label for="name" class="block mb-2 font-medium" data-lang="form_name">Naam</label>
@@ -457,10 +459,14 @@
                 project2_desc: "WordPress & Content Marketing",
                 project3_title: "Koffie Calculator",
                 project3_desc: "Custom JavaScript Tool",
-                coming_soon: "Coming Soon",
-                coming_soon2: "Coming Soon",
+                in_progress: "In Progress",
+                in_progress_2: "In Progress",
                 project_affiliate_title: "Affiliate Website",
                 project_affiliate_desc: "WordPress & Advanced SEO",
+                project_mylineup_title: "MyLineup App",
+                project_mylineup_desc: "Festival App Concept",
+                coming_soon: "Coming Soon",
+                coming_soon2: "Coming Soon",
                 project_geo_title: "GEO Website",
                 project_geo_desc: "Generative Engine Optimization",
                 show_more: "Meer projecten",
@@ -521,10 +527,14 @@
                 project2_desc: "WordPress & Content Marketing",
                 project3_title: "Coffee Calculator",
                 project3_desc: "Custom JavaScript Tool",
-                coming_soon: "Coming Soon",
-                coming_soon2: "Coming Soon",
+                in_progress: "In Progress",
+                in_progress_2: "In Progress",
                 project_affiliate_title: "Affiliate Website",
                 project_affiliate_desc: "WordPress & Advanced SEO",
+                project_mylineup_title: "MyLineup App",
+                project_mylineup_desc: "Festival App Concept",
+                coming_soon: "Coming Soon",
+                coming_soon2: "Coming Soon",
                 project_geo_title: "GEO Website",
                 project_geo_desc: "Generative Engine Optimization",
                 show_more: "More projects",
@@ -564,6 +574,7 @@
         const themeToggleLightIcons = [document.getElementById('theme-toggle-light-icon'), document.getElementById('theme-toggle-light-icon-mobile')];
 
         const applyTheme = () => {
+            // On page load or when changing themes, check localStorage
             if (localStorage.getItem('color-theme') === 'dark') {
                 document.documentElement.classList.add('dark');
                 themeToggleLightIcons.forEach(el => el.classList.remove('hidden'));
@@ -576,12 +587,14 @@
         };
 
         const handleThemeToggle = () => {
+            // if set via local storage previously
             if (localStorage.getItem('color-theme')) {
                 if (localStorage.getItem('color-theme') === 'light') {
                     localStorage.setItem('color-theme', 'dark');
                 } else {
                     localStorage.setItem('color-theme', 'light');
                 }
+            // if NOT set via local storage previously
             } else {
                 if (document.documentElement.classList.contains('dark')) {
                     localStorage.setItem('color-theme', 'light');
